package es.ucab.entrenos.modules.reputacion.modelos;

public class Resena {
}
